--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "laravel-elixir": "^6.0.0-15",
     "laravel-elixir-browsersync-official": "^1.0.0",
     "yargs": "^4.6.0",
-    "bootstrap-sass": "^3.3.7"
+    "bootstrap-sass": "^3.3.7",
+    "highlight.js": "^9.12.0"
   }
 }
